align retries with other SDKs